Scratchpad fixes. Make scratchpad resize as problem area expands, add scratchpad border, and remove extra space in 'Show scratch pad' Fixes part of https://code.google.com/p/khanacademy/issues/detail?id=5191

--- a/css/khan-exercise.css
+++ b/css/khan-exercise.css
@@ -37,7 +37,7 @@ body.debug .graphie { outline: 1px dashed red; }
 .graphie svg { position: absolute; top: 0; left: 0; }
 
 #scratchpad { padding-left: 30px; overflow: hidden; display: none; }
-#scratchpad div { position: absolute; z-index: 1; min-height: 378px; width: 100%; height: 100%; }
+#scratchpad div { position: absolute; z-index: 1; min-height: 378px; width: 100%; height: 98%; outline: 1px solid #ccc; }
 
 #tester-info.info-box { background: #f2e4bf; }
 #tester-info .box { border: 1px solid black; padding: 2px 4px; margin-left: 5px; }
